# mnetwork

./: .gitignore  Cargo.toml  README.md  __init__.pyi  file.txt  layers.pyi  linear.pyi  linear_layer.pyi  makefile  neural_net.pyi  nnet.pyi  test.py  tools.py
src/: functions.rs  layer.rs  lib.rs  linear.rs  loss.rs  main.rs  neuaral.rs  nn.rs  optimizers.rs  tools.rs
