[package]
name = "RPyNet"
version = "0.1.0"
edition = "2021"
authors = ["<NAME> <EMAIL>"]
description = "Neural Network Library"
repository = "https://github.com/alexander-krasnov/nn"
license = "MIT"
documentation = "https://docs.rs/nn"


[lib]
name = 'nnet'
proc-macro = false
crate-type = [ "rlib" , "cdylib"]
path = "src/lib.rs"
include = [ "src/lib.rs" , 
            "src/layer.rs", 
            "src/nn.rs", 
            "src/layer.rs",
            "src/functions.rs",
            "layers.pyi",
            "linear_layer.pyi",
            "neural_layer.pyi"
             ]

[dependencies]
ndarray = "0.15.6"
rand = "0.8"
derive_more = { version = "0.99.18", features = ["display", "default"] }
pyo3 = { version = "0.21.0", features = ["extension-module", "auto-initialize"] }
numpy = { version = "0.21.0" }